# openentropy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.pypi.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/openentropy-cli/src/: main.rs
crates/openentropy-cli/src/commands/: analyze.rs  bench.rs  compare.rs  mod.rs  record.rs  server.rs  sessions.rs  stream.rs  telemetry.rs
crates/openentropy-cli/src/tui/: app.rs  ui.rs
crates/openentropy-core/: Cargo.toml  README.md
crates/openentropy-core/src/: analysis.rs  benchmark.rs  chaos.rs  comparison.rs  conditioning.rs  dispatcher.rs  lib.rs  math.rs  pool.rs  session.rs  source.rs  source_resolution.rs  statistics.rs  synchrony.rs  telemetry.rs  temporal.rs  trials.rs  verdict.rs
crates/openentropy-core/src/sources/: cross_domain.rs  helpers.rs  mod.rs  network.rs  process.rs
crates/openentropy-core/src/sources/frontier/: ane_timing.rs  audio_pll_timing.rs  cas_contention.rs  coreaudio_ffi.rs  counter_beat.rs  denormal_timing.rs  dvfs_race.rs  fsync_journal.rs  gpu_divergence.rs  keychain_timing.rs  kqueue_events.rs  mach_ipc.rs  mod.rs  nvme_iokit_sensors.rs  nvme_latency.rs  nvme_passthrough_linux.rs  nvme_raw_device.rs  pipe_buffer.rs  tlb_shootdown.rs
crates/openentropy-core/src/sources/gpu/: gpu_divergence.rs  iosurface_crossing.rs  mod.rs  nl_inference_timing.rs
crates/openentropy-core/src/sources/io/: disk.rs  fsync_journal.rs  mod.rs  nvme_iokit_sensors.rs  nvme_passthrough_linux.rs  nvme_raw_device.rs  usb_enumeration.rs
crates/openentropy-core/src/sources/ipc/: keychain_timing.rs  kqueue_events.rs  mach_ipc.rs  mod.rs  pipe_buffer.rs
crates/openentropy-core/src/sources/microarch/: amx_timing.rs  aprr_jit_timing.rs  cas_contention.rs  cntfrq_cache_timing.rs  commoncrypto_aes_timing.rs  denormal_timing.rs  dual_clock_domain.rs  dvfs_race.rs  gxf_register_timing.rs  icc_atomic_contention.rs  memory_bus_crypto.rs  mod.rs  prefetcher_state.rs  sev_event_timing.rs  sitva.rs  speculative_execution.rs  tlb_shootdown.rs
crates/openentropy-core/src/sources/network/: dns_timing.rs  mod.rs  tcp_connect.rs  wifi_rssi.rs
crates/openentropy-core/src/sources/quantum/: mod.rs  qcicada_source.rs
crates/openentropy-core/src/sources/scheduling/: dispatch_queue_timing.rs  mod.rs  pe_core_arithmetic.rs  preemption_boundary.rs  sleep_jitter.rs  thread_lifecycle.rs  timer_coalescing.rs
crates/openentropy-core/src/sources/sensor/: audio.rs  bluetooth.rs  camera.rs  mod.rs  smc_highvar_timing.rs
crates/openentropy-core/src/sources/signal/: compression_timing.rs  hash_timing.rs  mod.rs  spotlight_timing.rs
crates/openentropy-core/src/sources/system/: getentropy_timing.rs  ioregistry.rs  mod.rs  proc_info_timing.rs  process.rs  sysctl.rs  vmstat.rs
crates/openentropy-core/src/sources/thermal/: audio_pll_timing.rs  coreaudio_ffi.rs  counter_beat.rs  display_pll.rs  mod.rs  pcie_pll.rs
crates/openentropy-core/src/sources/timing/: ane_timing.rs  clock_jitter.rs  commpage_clock_timing.rs  dram_row_buffer.rs  mach_continuous_timing.rs  mach_timing.rs  mod.rs  page_fault_timing.rs
crates/openentropy-core/tests/: integration.rs
crates/openentropy-python/: Cargo.toml
crates/openentropy-python/src/: analysis_bindings.rs  bench_bindings.rs  chaos_bindings.rs  comparison_bindings.rs  dispatcher_bindings.rs  lib.rs  record_bindings.rs  sessions_bindings.rs  statistics_bindings.rs  synchrony_bindings.rs  temporal_bindings.rs  trials_bindings.rs
crates/openentropy-server/: Cargo.toml  README.md
crates/openentropy-server/src/: lib.rs
crates/openentropy-tests/: README.md
crates/openentropy-tests/src/: lib.rs
crates/openentropy-wasm/: README.md
crates/openentropy-wasm/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  CLI.md  CONDITIONING.md  PYTHON_SDK.md  SOURCES.md  TRIALS.md  TROUBLESHOOTING.md
examples/: README.md
examples/rust/: chaos_analysis.rs
openentropy/: __init__.py
scripts/audit/: frontier_quality_audit.rs  full_source_audit.rs
tests/: test_python_bindings.py
website/: .env.example  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.mdx
website/src/content/docs/cli/: index.md  reference.md  sdk-mapping.md
website/src/content/docs/concepts/: analysis-chaos.md  analysis-cross-correlation.md  analysis-entropy.md  analysis-forensic.md  analysis-overview.md  analysis-statistics.md  analysis-synchrony.md  analysis-temporal.md  analysis-verdicts.md  analysis.md  architecture.md  conditioning.md  sources.md  telemetry.mdx  trials.md
website/src/content/docs/concepts/sources/: gpu.md  io.md  ipc.md  microarch.md  network.md  quantum.md  scheduling.md  sensor.md  signal.md  system.md  thermal.md  timing.md
website/src/content/docs/getting-started/: choose-your-path.mdx  index.mdx  quickstart.mdx
website/src/content/docs/guides/: ai-search.md  research-methodology.md  sdk-integration.md  security-validation.md  troubleshooting.md
website/src/content/docs/python-sdk/: analysis.md  index.md  quick-reference.md  reference.md
website/src/content/docs/rust-sdk/: analysis.md  api.md  index.md  quick-reference.md
website/src/styles/: custom.css
