[workspace]
members = [
    "crates/openentropy-core",
    "crates/openentropy-cli",
    "crates/openentropy-server",
    "crates/openentropy-tests",
    "crates/openentropy-python",
    "crates/openentropy-wasm",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"
license = "MIT"
authors = ["Amenti Labs"]
repository = "https://github.com/amenti-labs/openentropy"
homepage = "https://github.com/amenti-labs/openentropy"
description = "Harvest real entropy from 60+ hardware noise sources — conditioned for crypto, raw for research"
rust-version = "1.85"
keywords = ["entropy", "randomness", "hardware", "TRNG", "security"]
categories = ["cryptography", "hardware-support", "os"]
readme = "README.md"

[workspace.dependencies]
# Core
sha2 = "0.10"
flate2 = "1"
libc = "0.2"
rand = "0.9"
tempfile = "3"

log = "0.4"
env_logger = "0.11"
getrandom = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP Server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Python
pyo3 = { version = "0.23", features = ["extension-module"] }
pythonize = "0.23"

# Session recording
uuid = { version = "1", features = ["v4"] }
ctrlc = "3"

# Hardware
qcicada = "0.2.1"

# Testing
statrs = "0.18"
rustfft = "6"

# Internal
openentropy-core = { path = "crates/openentropy-core", version = "0.12.0" }
openentropy-server = { path = "crates/openentropy-server", version = "0.12.0" }
openentropy-tests = { path = "crates/openentropy-tests", version = "0.12.0" }
