[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openentropy"
version = "0.12.3"
description = "Your computer is a hardware noise observatory. Harvests entropy from 60+ hardware noise sources."
readme = "README.pypi.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Amenti Labs" }]
keywords = ["entropy", "randomness", "hardware", "noise", "TRNG", "security", "QRNG", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/amenti-labs/openentropy"
Repository = "https://github.com/amenti-labs/openentropy"
Documentation = "https://amenti-labs.github.io/openentropy/"
Issues = "https://github.com/amenti-labs/openentropy/issues"

[tool.maturin]
manifest-path = "crates/openentropy-python/Cargo.toml"
python-source = "."
module-name = "openentropy.openentropy"
features = ["pyo3/extension-module"]
