[package]
name = "openentropy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core entropy harvesting library — hardware noise sources, raw or SHA-256 conditioned"
readme = "README.md"

[[example]]
name = "basic"
path = "../../examples/rust/basic.rs"

[[example]]
name = "raw_vs_conditioned"
path = "../../examples/rust/raw_vs_conditioned.rs"

[[example]]
name = "stream_to_file"
path = "../../examples/rust/stream_to_file.rs"

[[example]]
name = "chaos_analysis"
path = "../../examples/rust/chaos_analysis.rs"

[dependencies]
sha2 = { workspace = true }
flate2 = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

log = { workspace = true }
getrandom = { workspace = true }
qcicada = { workspace = true }
