[package]
name = "openentropy-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for openentropy via PyO3"
keywords.workspace = true
categories.workspace = true

[lib]
name = "openentropy"
crate-type = ["cdylib"]

[dependencies]
openentropy-core = { workspace = true }
openentropy-tests = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
pythonize = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.23"
